[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/silent_wolf/Scores/Leaderboard.gd" type="Script" id=1]
[ext_resource path="res://addons/silent_wolf/Scores/assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/silent_wolf/assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/silent_wolf/common/SWButton.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=4]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.6, 0.6, 0.6, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=5]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.6, 0.6, 0.6, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=7]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.6, 0.6, 0.6, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Leaderboard" type="Node2D"]
script = ExtResource( 1 )

[node name="OldBoard" type="MarginContainer" parent="."]
visible = false
margin_left = 50.0
margin_right = 50.0
margin_bottom = 40.0

[node name="HighScores" type="TextureRect" parent="OldBoard"]
margin_bottom = 40.0

[node name="Board" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_right = 494.0
margin_bottom = 698.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="CenterContainer" parent="Board"]
margin_right = 489.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="Board/TitleContainer"]
margin_left = 34.0
margin_right = 454.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "Leaderboard"

[node name="MessageContainer" type="CenterContainer" parent="Board"]
visible = false
margin_top = 68.0
margin_right = 501.0
margin_bottom = 105.0

[node name="TextMessage" type="Label" parent="Board/MessageContainer"]
margin_left = 107.0
margin_right = 393.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "Loading scores..."
valign = 1

[node name="Menu" type="HBoxContainer" parent="Board"]
margin_top = 68.0
margin_right = 489.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 100 )
theme = SubResource( 3 )
alignment = 1

[node name="Index" type="Label" parent="Board/Menu"]
margin_top = 28.0
margin_right = 100.0
margin_bottom = 71.0
rect_min_size = Vector2( 100, 0 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "No."
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="playername" type="Label" parent="Board/Menu"]
margin_left = 104.0
margin_top = 28.0
margin_right = 251.0
margin_bottom = 71.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 5 )
text = "PlayerName"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="score" type="Button" parent="Board/Menu"]
margin_left = 255.0
margin_top = 28.0
margin_right = 370.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 5 )
text = "score"

[node name="Time" type="Label" parent="Board/Menu"]
margin_left = 374.0
margin_top = 28.0
margin_right = 489.0
margin_bottom = 71.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 5 )
text = "Time"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="HighScores" type="CenterContainer" parent="Board"]
margin_top = 168.0
margin_right = 489.0
margin_bottom = 268.0
rect_min_size = Vector2( 0, 100 )
theme = SubResource( 3 )

[node name="ScoreItemContainer" type="VBoxContainer" parent="Board/HighScores"]
margin_left = 244.0
margin_top = 50.0
margin_right = 244.0
margin_bottom = 50.0

[node name="CloseButtonContainer" type="CenterContainer" parent="Board"]
margin_top = 268.0
margin_right = 489.0
margin_bottom = 309.0

[node name="CloseButton" parent="Board/CloseButtonContainer" instance=ExtResource( 4 )]
margin_left = 85.0
margin_right = 403.0
margin_bottom = 41.0
text = "Close Leaderboard"

[node name="Back" type="Button" parent="."]
margin_left = 519.036
margin_top = 24.0029
margin_right = 618.036
margin_bottom = 44.0029
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Board/Menu/score" to="." method="_on_score_pressed"]
[connection signal="pressed" from="Board/CloseButtonContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
